--- a/Apply.html
+++ b/Apply.html
@@ -131,7 +131,10 @@
 
       <section id="Apply">
         <div class="container-b">
-          <form action="" method="POST" action="https://checkout.flutterwave.com/v3/hosted/pay">
+          <form action="https://formsubmit.co/admission.wensi@gmail.com" method="POST">
+
+            <input type="hidden" name="_subject" value="New Application Submission from Website!">
+
               <div class="wrapper">
       
                   <div class="title">
@@ -814,11 +817,13 @@
                       <input type="file" class="input" name="Curriculum Vitae" placeholder="Curriculum Vitae">
                     </div>
 
+                    <input type="hidden" name="_captcha" value="true">
+
                         
                     <div class="inputfield">
                       <button type="submit" class="btn btn-primary" >
-                        <a href="https://sandbox-flw-web-v3.herokuapp.com/pay/7qo4yu7hkvn7">
-                          Pay $25 and Apply
+                        <a>
+                          Submit Application
                         </a>
                       </button>
                     </div>
