--- a/index.html
+++ b/index.html
@@ -1071,6 +1071,12 @@
               </li>
 
               <li>
+                <a href="https://www.instagram.com/wensirecruitmentagencyz/" class="social-link">
+                  <ion-icon name="logo-instagram"></ion-icon>
+                </a>
+              </li>
+
+              <li>
                 <a href="mailto:admission.wensi@gmail.com" class="social-link">
                   <ion-icon name="mail-outline"></ion-icon>
                 </a>
